--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Default ignored files
 /shelf/
-/workspace.xml
+/.idea/workspace.xml
 # Editor-based HTTP Client requests
 /httpRequests/
 # Datasource local storage ignored files
@@ -11,3 +11,5 @@
 /modules.xml
 /vcs.xml
 /workspace.xml
+/.idea/
+.DS_Store
